--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,9 +15,9 @@ title = "Dede's Dung Pile (Of Thoughts)"
   # copyright = "Copy, _right?_ :thinking_face:"
 
 [params.author]
-  name = "Andres Bermeo Marinelli"
-  email = "andres.bermeomarinelli@proton.me"
-  image = "img/author.jpeg"
+  name = "Dede"
+  email = "dede.fra@proton.me"
+  image = "img/think.jpg"
 #   imageQuality = 96
 #   headline = "I'm only human"
 #   bio = "A little bit about you"
